--- a/build.xml
+++ b/build.xml
@@ -1,74 +1,95 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
-<project name="UllaQC" default="default" basedir=".">
-    <description>Builds, tests, and runs the project UllaQC.</description>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
+<?xml version="1.0"?>
+<project name="UllaQC" default="jar" basedir=".">
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+	<property name="src" value="src" />
+	<property name="lib" value="lib" />
+	<property name="conf" value="conf" />
+	<property name="rest" value="rest" />
+	<property name="icons" value="icons" />
+	<property name="build" value="build" />
+	<property name="dist" value="dist" />
 
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
+	<property name="manifest" value="ullaqc.mf" />
 
-    (Targets beginning with '-' are not intended to be called on their own.)
+    <fileset id="jars" dir="${lib}">
+    	<include name="*.jar" />
+    </fileset>
+     	
+	<path id="cppath">
+		<fileset refid="jars" />
+	</path>
 
-    Example of inserting an obfuscator after compilation could look like this:
+	<pathconvert property="classpath" refid="cppath" pathsep=" " dirsep="/">
+	    <map from="${basedir}${file.separator}" to="" />
+    </pathconvert>
+	
+	<target name="manifest">
+	   	<manifest file="${manifest}" mode="replace">
+	  		<attribute name="Built-By" value="${user.name}"/>
+	   		<attribute name="Class-Path" value=". ${classpath}"/>	  	
+	  	</manifest>
+	</target>
+	
+	<target name="compile">
 
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
+		<mkdir dir="${build}" />
 
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
+		<javac target="1.5" srcdir="${src}" destdir="${build}" debug="on">
+			<classpath refid="cppath" />
+		</javac>
+		
+	</target>
 
+	<target name="jar" depends="compile,manifest">
+		
+		<mkdir dir="${dist}" />
+		<mkdir dir="${dist}/lib" />
+		<mkdir dir="${dist}/icons" />
+		<mkdir dir="${dist}/conf" />
 
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
+		<!-- copy the sources, to include all resources like XML report definition -->
+		<copy todir="${build}">
+			<fileset dir="${src}" />
+		</copy>
+				
+		<copy todir="${dist}">
+			<fileset file="${rest}/start*.*" />
+		</copy>
+		
+		<chmod perm="a+x">
+			<fileset file="${dist}/start*.*" />
+		</chmod>
+		
+		<copy todir="${dist}/conf">
+			<fileset file="${conf}/*.properties" />
+			<fileset file="${conf}/*.xml" />
+		</copy>
+		
+		<copy todir="${dist}/icons">
+			<fileset file="${icons}/*.png" />
+		</copy>
+		
+		<copy todir="${dist}/lib">
+			<fileset file="${lib}/*.jar" />
+			<fileset file="${lib}/*.dll" />
+		</copy>
 
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar-with-manifest:    JAR building (if you are using a manifest)
-      -do-jar-without-manifest: JAR building (if you are not using a manifest)
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
+		<copy todir="${dist}">
+			<fileset file="COPYRIGHT.TXT" />
+			<fileset file="GPL.TXT" />
+		</copy>
+				
+		<jar destfile="${dist}/UllaQC.jar" manifest="${manifest}">
+			<fileset dir="${build}" />
+		</jar>
+		
+	</target>
 
-    An example of overriding the target for project execution could look like this:
+	<target name="clean">
+		<delete dir="${build}" />
+		<delete dir="${dist}" />
+		<delete file="${manifest}" />
+	</target>
 
-        <target name="run" depends="UllaQC-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
-
-    -->
 </project>
+
